# SupportCarr

./: .dockerignore  .env.example  .gitignore  API_KEYS_SETUP.md  AUDIT_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_ISSUES.md  CODE_REVIEW_README.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ENV_VARIABLES_SUMMARY.md  LOGIC_AUDIT_SUMMARY.md  LOGIC_AUDIT_VERIFICATION.md  MOCK_DEMO_SETUP.md  OPS_SIMULATOR_AUDIT.md  PR_LABELS.md  PR_SUMMARY.md  QUICK_START.md  README.md  ROADMAP.md  create-issues.js  docker-compose.yml  errorHandler.js  eslint.config.mjs  index.js  package-lock.json  package.json
.github/agents/: agent1.md  agent2.md  agent3.agent.md  agent3.md  agent4.md
.github/workflows/: ci.yml
__tests__/: rides.test.js
_archived/supportcarr-rs/crates/core/: Cargo.toml
_archived/supportcarr-rs/crates/core/src/: dispatch.rs  error.rs  model.rs
_archived/supportcarr-rs/crates/twilio/: Cargo.toml
backend/api/: gateway.js
backend/auth/: pkceJwt.test.js
backend/postgres/: schema.sql
backend/redis/: index.js
backend/schemas/: event.json
client/: .env.example  .eslintrc.cjs  index.html  jest.config.cjs  package.json  tailwind.config.js
client/public/: manifest.webmanifest  offline.html
client/src/: App.jsx  main.jsx
client/src/api/: geocoding.js  httpClient.js
client/src/components/: DriverDashboard.jsx  MapPreview.jsx  RideRequestForm.jsx
client/src/hooks/: useDemoSession.js  useRideData.js
client/src/pages/: ActiveRidePage.jsx  AdminPage.jsx  DriverPage.jsx  LandingPage.jsx  (+1 more)
docs/: API.md  ARCHITECTURE.md  BUSINESS_PLAN.md  PILOT_SETUP.md  ProjectResearchCompendium.md  README.md  TASKS.md  openapi.yaml
server/: .env.example  .eslintrc.cjs  jest.config.cjs  jest.integration.config.cjs  jest.unit.config.cjs  knexfile.js  package.json  server.js
server/migrations/: 20241010120000_init_schema.js  20241010123000_add_payment_ledger.js  20241020120000_add_geo_indexes.js
server/scripts/: backfill-rider-phone.js  test-multi-rider-wtp.js  test-wtp-flow.js  validate-airtable-config.js
server/src/: app.js
services/api-gateway/: README.md  index.js  package-lock.json  package.json
src/middleware/: errorHandler.js  pkceJwt.js  validateEvent.js  validateRideRequest.js
supportcarr-rs/: Cargo.toml  README.md
supportcarr-rs/crates/api/: Cargo.toml
supportcarr-rs/crates/api/src/: lib.rs
supportcarr-rs/crates/core/src/: fsm.rs  lib.rs
supportcarr-rs/crates/dispatch-redis/: Cargo.toml
supportcarr-rs/crates/twilio/src/: lib.rs
test/: errorHandler.test.js
(+79 files in other folders)
