[package]
name = "supportcarr-api"
version = "0.1.0"
edition = "2021"
authors = ["SupportCarr Migration Team"]
license = "MIT"

[dependencies]
supportcarr-core = { path = "../core" }
supportcarr-dispatch-redis = { path = "../dispatch-redis" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
