[package]
name = "supportcarr-core"
version = "0.1.0"
edition = "2021"
authors = ["SupportCarr Migration Team"]
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
